0.9.02 (--.--.2014):
- added initial support for content blocking (Adblock Plus compatible);
- added more keyboard shortcuts;
- allow to stop page loading by pressing Esc;
- no need for manual tweaking to get working binary for Windows XP (requires Qt 5.3);
- translation related improvements;
- some other fixes and minor improvements.

0.9.01 (01.06.2014):
- added application icon by Walerian Walawski;
- added error console;
- added support for additional attributes for bookmarks;
- added support for bookmark keyword;
- allow to load translations (18 languages available);
- allow to configure SSL ciphers priorities;
- allow to compile using Qt stack available in Ubuntu (outdated QtWebKit);
- various minor fixes and improvements.

0.5.01 (01.05.2014):
- added startup / crash recovery dialog;
- implemented "Reload Image" action;
- improved handling of bookmarklets;
- some other fixes and minor improvements.

0.4.01 (01.04.2014):
- added basic full screen mode support;
- User Agents configuration;
- various tab bar related fixes;
- some other fixes and changes.

0.3.01 (01.03.2014):
- added option to set custom User Agent (for single tab or whole application);
- added support for proxy auto-config (PAC);
- added option to decide if JavaScript should be able to show status messages;
- implemented "Reuse Current Tab" option;
- various small fixes.

0.2.01 (01.02.2014):
- added support for profiles defining keyboard shortcuts and action macros;
- added support for proxy configuration;
- added quick go to or search of clipboard contents on middle click on address field;
- added option to delay loading of tab contents until selected;
- added option to disable referrer;
- modified appearance of search widget;
- minor improvements in cache viewer;
- some other fixes and minor improvements.

0.1.01 (01.01.2014):
- added dedicated context menu for media content (AUDIO and VIDEO tags);
- added global history with manager;