@@ -33,6 +33,7 @@ SOURCES += src/main.cpp \
     src/core/ActionsManager.cpp \
     src/core/AddressCompletionModel.cpp \
     src/core/Application.cpp \
+    src/core/BookmarksImporter.cpp \
     src/core/BookmarksManager.cpp \
     src/core/BookmarksModel.cpp \
     src/core/ContentBlockingList.cpp \
@@ -61,6 +62,7 @@ SOURCES += src/main.cpp \
     src/ui/AddressWidget.cpp \
     src/ui/AuthenticationDialog.cpp \
     src/ui/BookmarkPropertiesDialog.cpp \
+    src/ui/BookmarksImporterWidget.cpp \
     src/ui/ClearHistoryDialog.cpp \
     src/ui/ConsoleWidget.cpp \
     src/ui/ContentsDialog.cpp \
@@ -97,6 +99,8 @@ SOURCES += src/main.cpp \
     src/modules/backends/web/qtwebkit/QtWebKitWebBackend.cpp \
     src/modules/backends/web/qtwebkit/QtWebKitWebPage.cpp \
     src/modules/backends/web/qtwebkit/QtWebKitWebWidget.cpp \
+    src/modules/importers/opera/OperaBookmarksImporter.cpp \
+    src/modules/importers/other/HtmlBookmarksImporter.cpp \
     src/modules/windows/bookmarks/BookmarksContentsWidget.cpp \
     src/modules/windows/cache/CacheContentsWidget.cpp \
     src/modules/windows/configuration/ConfigurationContentsWidget.cpp \
@@ -112,6 +116,7 @@ HEADERS += src/core/Action.h \
     src/core/ActionsManager.h \
     src/core/AddressCompletionModel.h \
     src/core/Application.h \
+    src/core/BookmarksImporter.h \
     src/core/BookmarksManager.h \
     src/core/BookmarksModel.h \
     src/core/ContentBlockingList.h \
@@ -140,6 +145,7 @@ HEADERS += src/core/Action.h \
     src/ui/AddressWidget.h \
     src/ui/AuthenticationDialog.h \
     src/ui/BookmarkPropertiesDialog.h \
+    src/ui/BookmarksImporterWidget.h \
     src/ui/ClearHistoryDialog.h \
     src/ui/ConsoleWidget.h \
     src/ui/ContentsDialog.h \
@@ -176,6 +182,8 @@ HEADERS += src/core/Action.h \
     src/modules/backends/web/qtwebkit/QtWebKitWebBackend.h \
     src/modules/backends/web/qtwebkit/QtWebKitWebPage.h \
     src/modules/backends/web/qtwebkit/QtWebKitWebWidget.h \
+    src/modules/importers/opera/OperaBookmarksImporter.h \
+    src/modules/importers/other/HtmlBookmarksImporter.h \
     src/modules/windows/bookmarks/BookmarksContentsWidget.h \
     src/modules/windows/cache/CacheContentsWidget.h \
     src/modules/windows/configuration/ConfigurationContentsWidget.h \
@@ -189,6 +197,7 @@ HEADERS += src/core/Action.h \
 
 FORMS += src/ui/AuthenticationDialog.ui \
     src/ui/BookmarkPropertiesDialog.ui \
+    src/ui/BookmarksImporterWidget.ui \
     src/ui/ClearHistoryDialog.ui \
     src/ui/ConsoleWidget.ui \
     src/ui/ImportDialog.ui \
