@@ -1,5 +1,6 @@
 0.9.02 (--.--.2014):
 - added initial support for content blocking (Adblock Plus compatible);
+- added Opera and HTML (Netscape) bookmarks import
 - added more keyboard shortcuts;
 - allow to stop page loading by pressing Esc;
 - no need for manual tweaking to get working binary for Windows XP (requires Qt 5.3);
